[package]
name = "libkef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features=["derive"]}
futures = { version = "0.3.24" }
simple-error = { version = "0.2.3" }
ssdp-client = { version = "1.0.0" }
url = { version = "1.7.2" }
xmltree = { version = "0.10.3" }
reqwest = { version = "0.11.12", features = ["blocking", "json"]}
bytes = {version = "1.2.1"}
log = {version = "0.4.17"}